# ldview

./: .cvsignore  .gitignore  .travis.yml  8464.mpd  AppResources.h  AppResources.hm  AppResources.rc  BatchConvertDialog.cpp  BatchConvertDialog.h  BatchStlConverter.cpp  BatchStlConverter.h  BoolOptionUI.cpp  BoolOptionUI.h  BoundingBoxDialog.cpp  BoundingBoxDialog.h  Build.txt  CMakeLists.txt  CameraLocationDialog.cpp  CameraLocationDialog.h  ChangeHistory.html  CommandLineList.spin1.txt  CommandLineList.spin2.txt  CommandLinesList.spin1.txt  CommandLinesList.spin2.txt  ContextHelp.h  Downloads.html  EnumOptionUI.cpp  EnumOptionUI.h  ExportOptionsDialog.cpp  ExportOptionsDialog.h  FloatOptionUI.cpp  FloatOptionUI.h  FutureFeatures.html  GroupOptionUI.cpp  GroupOptionUI.h  Help.html  JpegOptionsDialog.cpp  JpegOptionsDialog.h  LDVExtensionsSetup.cpp  LDVExtensionsSetup.h  (+88 more)
CUI/: CMakeLists.txt  CUI.dsp  CUI.vcproj  CUI.vcxproj  CUI.vcxproj.filters  CUIButton.cpp  CUIButton.h  CUIColorButton.cpp  CUIColorButton.h  CUIDefines.h  CUIDialog.cpp  CUIDialog.h  CUIModuleHolder.h  CUIOGLWindow.cpp  CUIOGLWindow.h  CUIPropertySheet.cpp  CUIPropertySheet.h  CUIScaler.cpp  CUIScaler.h  CUISubWindowInfo.cpp  CUISubWindowInfo.h  CUIThemes.cpp  CUIThemes.h  CUIWindow.cpp  CUIWindow.h  CUIWindowList.cpp  CUIWindowList.h  CUIWindowListEnumerator.cpp  CUIWindowListEnumerator.h  CUIWindowResizer.cpp  CUIWindowResizer.h  Makefile.vc
LDExporter/: .cvsignore  CMakeLists.txt  LD3dsExporter.cpp  LD3dsExporter.h  LDExportMessages.ini  LDExporter.cpp  LDExporter.dsp  LDExporter.h  LDExporter.vcproj  LDExporter.vcxproj  LDExporter.vcxproj.filters  LDExporterSetting.cpp  LDExporterSetting.h  LDLdrExporter.cpp  LDLdrExporter.h  LDPovExportUDKeys.h  LDPovExporter.cpp  LDPovExporter.h  LDStlExporter.cpp  LDStlExporter.h  LGEO.xml  Makefile  Makefile.vc  lg_elements.lst
LDLib/: CMakeLists.txt  LDConsoleAlertHandler.cpp  LDHtmlInventory.cpp  LDHtmlInventory.h  LDInputHandler.cpp  LDInputHandler.h  LDLib.dsp  LDLib.vcproj  LDLib.vcxproj  LDLib.vcxproj.filters  LDLibraryUpdateInfo.cpp  LDLibraryUpdateInfo.h  LDLibraryUpdater.cpp  LDLibraryUpdater.h  LDModelParser.cpp  LDModelParser.h  LDModelTree.cpp  LDModelTree.h  LDObiInfo.cpp  LDObiInfo.h  LDPartCount.cpp  LDPartCount.h  LDPartsList.cpp  LDPartsList.h  LDPreferences.cpp  LDPreferences.h  LDSnapshotTaker.cpp  LDSnapshotTaker.h  LDUserDefaultsKeys.h  LDViewPoint.cpp  LDViewPoint.h  LDrawModelViewer.cpp  LDrawModelViewer.h  Makefile  Makefile.vc
LDLoader/: .cvsignore  CMakeLists.txt  LDLActionLine.cpp  LDLActionLine.h  LDLAutoCamera.cpp  LDLAutoCamera.h  LDLCamera.cpp  LDLCamera.h  LDLCommentLine.cpp  LDLCommentLine.h  LDLConditionalLineLine.cpp  LDLConditionalLineLine.h  LDLEmptyLine.cpp  LDLEmptyLine.h  LDLError.cpp  LDLError.h  LDLFacing.cpp  LDLFacing.h  LDLFileLine.cpp  LDLFileLine.h  LDLFindFileAlert.cpp  LDLFindFileAlert.h  LDLLineLine.cpp  LDLLineLine.h  LDLMainModel.cpp  LDLMainModel.h  LDLModel.cpp  LDLModel.h  LDLModelLine.cpp  LDLModelLine.h  LDLPalette.cpp  LDLPalette.h  LDLPrimitiveCheck.cpp  LDLPrimitiveCheck.h  LDLQuadLine.cpp  LDLQuadLine.h  LDLShapeLine.cpp  LDLShapeLine.h  LDLTriangleLine.cpp  LDLTriangleLine.h  (+11 more)
Launcher/: CMakeLists.txt  Launcher.cpp  Launcher.dsp  Launcher.sln  Launcher.vcproj  Launcher.vcxproj  Launcher.vcxproj.filters  Makefile.vc
QT/: .cvsignore  .gitignore  APKBUILD  About.h  AboutPanel.ui  AlertHandler.cpp  AlertHandler.h  BoundingBoxPanel.ui  CMakeLists.txt  CameraLocationPanel.ui  CustomizeToolbar.ui  ErrorPanel.ui  ErrorPanel.ui.h  ExportOptionPanel.ui  ExportOptionPanel.ui.h  ExtraDirPanel.ui  ExtraDirPanel.ui.h  Help.h  HelpPanel.ui  ImageHolder.ui  JpegOptionsPanel.ui  JpegOptionsPanel.ui.h  LDView.1  LDView.cw  LDView.mak  LDView.pro  LDView.rpmlintrc  LDView.spec  LDView.ui  LDView.ui.h  LDViewBoundingBox.cpp  LDViewBoundingBox.h  LDViewCameraLocation.cpp  LDViewCameraLocation.h  LDViewCustomizeToolbar.cpp  LDViewCustomizeToolbar.h  LDViewErrors.cpp  LDViewErrors.h  LDViewExportOption.cpp  LDViewExportOption.h  (+93 more)
QT/OBS/: .gitignore  LDView-Debian_6.0.dsc_  LDView-Debian_7.0.dsc  LDView-Debian_8.0.dsc  LDView-Debian_9.0.dsc  LDView-Univention_3.2.dsc  LDView-Univention_4.0.dsc  LDView-Univention_4.1.dsc  LDView-Univention_4.2.dsc  LDView-Univention_4.3.dsc  LDView-Univention_4.4.dsc  LDView-qt5-Debian_8.0.dsc  LDView-qt5-Debian_9.0.dsc  LDView-qt5-Univention_4.2.dsc  LDView-qt5-Univention_4.3.dsc  LDView-qt5-Univention_4.4.dsc  LDView-qt5-xUbuntu_14.04.dsc  (+40 more)
TCFoundation/: CMakeLists.txt  Makefile  Makefile.vc  STB.cpp  TCAlert.cpp  TCAlert.h  TCAlertManager.cpp  TCAlertManager.h  TCArray.cpp  TCArray.h  TCAutoreleasePool.cpp  TCAutoreleasePool.h  TCBinaryObjectTree.cpp  TCBinaryObjectTree.h  TCBinaryTree.cpp  TCBinaryTree.h  TCBmpImageFormat.cpp  TCBmpImageFormat.h  TCDefines.h  TCDictionary.cpp  TCDictionary.h  TCFoundation.dsp  TCFoundation.vcproj  TCFoundation.vcxproj  TCFoundation.vcxproj.filters  TCImage.cpp  TCImage.h  TCImageFormat.cpp  TCImageFormat.h  TCImageOptions.cpp  TCJpegImageFormat.cpp  TCJpegImageFormat.h  TCJpegOptions.cpp  TCJpegOptions.h  TCLocalStrings.cpp  TCLocalStrings.h  TCMacros.h  TCMutex.cpp  TCMutex.h  TCNetwork.cpp  (+44 more)
TRE/: CMakeLists.txt  Makefile  Makefile.vc  TRE.dsp  TRE.vcproj  TRE.vcxproj  TRE.vcxproj.filters  TRECamera.cpp  TRECamera.h  TREColoredShapeGroup.cpp  TREColoredShapeGroup.h  TREFacing.cpp  TREFacing.h  TREGL.h  TREGLExtensions.cpp  TREGLExtensions.h  TREMainModel.cpp  TREMainModel.h  TREModel.cpp  TREModel.h  TREShapeGroup.cpp  TREShapeGroup.h  TRESmoother.cpp  TRESmoother.h  TRESubModel.cpp  TRESubModel.h  TRETexmappedShapeGroup.cpp  TRETexmappedShapeGroup.h  TRETransShapeGroup.cpp  TRETransShapeGroup.h  TREVertexArray.cpp  TREVertexArray.h  TREVertexKey.h  TREVertexStore.cpp  TREVertexStore.h
UnMirrorStuds/: .gitignore  CMakeLists.txt  Makefile  UnMirrorStuds.cpp  UnMirrorStuds.dsp  UnMirrorStuds.h  UnMirrorStuds.rc  UnMirrorStuds.vcproj  UnMirrorStuds.vcxproj  UnMirrorStuds.vcxproj.filters  UnMirrorStudsMain.cpp  resource.h
src/: CMakeLists.txt
(+821 files in other folders)
